Fix overlapping text when fullheight content is taller than 100svb

--- a/src/styles/utilities.css
+++ b/src/styles/utilities.css
@@ -23,7 +23,7 @@
 }
 
 .fullheight {
-  block-size: 100svb;
+  min-block-size: 100svb;
   display: grid;
   place-content: center;
   place-content: safe center;
